--- a/src/Pokedex.Application/Pokedex.Application.csproj
+++ b/src/Pokedex.Application/Pokedex.Application.csproj
@@ -7,4 +7,8 @@
     <AnalysisMode>All</AnalysisMode>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pokedex.Domain\Pokedex.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
