--- a/src/Pokedex.Infrastructure/Pokedex.Infrastructure.csproj
+++ b/src/Pokedex.Infrastructure/Pokedex.Infrastructure.csproj
@@ -7,4 +7,8 @@
     <AnalysisMode>All</AnalysisMode>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pokedex.Application\Pokedex.Application.csproj" />
+  </ItemGroup>
+
 </Project>
