feat: implemented HTTP client for Poke API

--- a/src/Pokedex.Infrastructure/Pokedex.Infrastructure.csproj
+++ b/src/Pokedex.Infrastructure/Pokedex.Infrastructure.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pokedex.Application\Pokedex.Application.csproj" />
   </ItemGroup>
 
