--- a/src/Pokedex.Application/Pokedex.Application.csproj
+++ b/src/Pokedex.Application/Pokedex.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Pokedex.Domain\Pokedex.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pokemon\" />
+  </ItemGroup>
+
 </Project>
