--- a/src/Pokedex.Application/Pokedex.Application.csproj
+++ b/src/Pokedex.Application/Pokedex.Application.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pokemon\" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
 </Project>
