feat: first use case completed

--- a/src/Pokedex.Api/Pokedex.Api.csproj
+++ b/src/Pokedex.Api/Pokedex.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pokedex.Application\Pokedex.Application.csproj" />
+    <ProjectReference Include="..\Pokedex.Infrastructure\Pokedex.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
