--- a/src/Pokedex.Api/appsettings.json
+++ b/src/Pokedex.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PokeApi": {
+    "BaseAddress": "https://pokeapi.co/"
+  }
 }
