--- a/test/Pokedex.Infrastructure.UnitTests/Pokedex.Infrastructure.UnitTests.csproj
+++ b/test/Pokedex.Infrastructure.UnitTests/Pokedex.Infrastructure.UnitTests.csproj
@@ -39,4 +39,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestApiResponses\PokemonSpeciesApiResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
