--- a/src/Pokedex.Application/Pokedex.Application.csproj
+++ b/src/Pokedex.Application/Pokedex.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
