feat: added basic Pokemon information endpoint  (#1)

--- a/src/Pokedex.Application/Pokedex.Application.csproj
+++ b/src/Pokedex.Application/Pokedex.Application.csproj
@@ -7,4 +7,13 @@
     <AnalysisMode>All</AnalysisMode>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pokedex.Domain\Pokedex.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
