--- a/test/Pokedex.Infrastructure.UnitTests/Pokedex.Infrastructure.UnitTests.csproj
+++ b/test/Pokedex.Infrastructure.UnitTests/Pokedex.Infrastructure.UnitTests.csproj
@@ -47,6 +47,12 @@
     <None Update="TestApiResponses\PokemonSpeciesApiResponse.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestApiResponses\ShakespeareTranslationApiResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestApiResponses\YodaTranslationApiResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
