--- a/test/Pokedex.Application.UnitTests/Pokedex.Application.UnitTests.csproj
+++ b/test/Pokedex.Application.UnitTests/Pokedex.Application.UnitTests.csproj
@@ -21,6 +21,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="ILogger.Moq" Version="1.1.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Moq.Analyzers" Version="0.2.0">
