feat: fixed DI in Infrastructure project

--- a/src/Pokedex.Api/appsettings.json
+++ b/src/Pokedex.Api/appsettings.json
@@ -21,5 +21,8 @@
   "AllowedHosts": "*",
   "PokeApi": {
     "BaseAddress": "https://pokeapi.co/"
+  },
+  "FunTranslationsApi": {
+    "BaseAddress": "https://api.funtranslations.com/"
   }
 }
